Fix for not visible sidebar on mobile.

--- a/docs/themes/avocadocs/static/styles/customizations.css
+++ b/docs/themes/avocadocs/static/styles/customizations.css
@@ -1172,3 +1172,7 @@ blockquote p {
 .duik-sidebar {
   padding-top: 5rem;
 }
+
+.duik-sidebar-sticky {
+  overflow: hidden !important;
+}
